# disco-synth

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Kconfig  LICENSE.md  README.md  app.overlay  prj.conf  session.yaml
drivers/: CMakeLists.txt  Kconfig
drivers/audio/: CMakeLists.txt  Kconfig
dts/bindings/: rotary-encoders.yaml  three-pos-switches.yaml
src/: Audio.cpp  Audio.hpp  KeyPress.cpp  KeyPress.hpp  RotaryEncoder.cpp  RotaryEncoder.hpp  Switch.cpp  Switch.hpp  Synthesizer.cpp  Synthesizer.hpp  USB.cpp  USB.hpp  cs43l22.c  leds.cpp  leds.h  main.cpp  peripherals.cpp  peripherals.hpp
src/Synthesizer/: Key.cpp  Key.hpp  Oscillator.cpp  Oscillator.hpp  sine.c  sine.h
